update name of api, fix get category name of getproductbyid

--- a/SE161774.ProductManagement.API/appsettings.json
+++ b/SE161774.ProductManagement.API/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    // "ProductManagement": "Server=LAPTOP-9COIMEED\\MSSQLSERVER19;Uid=sa;Pwd=12345;Database=FStoreDB;Trusted_Connection=True; Encrypt=False;MultipleActiveResultSets=true"
-    "ProductManagement": "Data Source=sqldata;Initial Catalog=FStoreDB;Persist Security Info=True;User ID=SA;Password=vV5r9tn0M4@;TrustServerCertificate=true;"
+    "ProductManagement": "Server=LAPTOP-9COIMEED\\MSSQLSERVER19;Uid=sa;Pwd=12345;Database=FStoreDB;Trusted_Connection=True; Encrypt=False;MultipleActiveResultSets=true"
+    //"ProductManagement": "Data Source=sqldata;Initial Catalog=FStoreDB;Persist Security Info=True;User ID=SA;Password=vV5r9tn0M4@;TrustServerCertificate=true;"
 
   }
 }
