Done generate jwt

--- a/SE161774.ProductManagement.API/appsettings.json
+++ b/SE161774.ProductManagement.API/appsettings.json
@@ -6,9 +6,16 @@
     }
   },
   "ConnectionStrings": {
-    "ProductManagement": "Server=172.19.32.1,1440;Initial Catalog=FStoreDB;Persist Security Info=True;User ID=sa;Password=vV5r9tn0M4@;TrustServerCertificate=true;",
-    //"ProductManagement": "Server=LAPTOP-9COIMEED\\MSSQLSERVER19;Uid=sa;Pwd=12345;Database=FStoreDB;Trusted_Connection=True; Encrypt=False;MultipleActiveResultSets=true"
+    //"ProductManagement": "Server=172.19.32.1,1440;Initial Catalog=FStoreDB;Persist Security Info=True;User ID=sa;Password=vV5r9tn0M4@;TrustServerCertificate=true;",
+    "ProductManagement": "Server=LAPTOP-9COIMEED\\MSSQLSERVER19;Uid=sa;Pwd=12345;Database=FStoreDB;Trusted_Connection=True; Encrypt=False;MultipleActiveResultSets=true"
     //"ProductManagement": "Data Source=sqldata;Initial Catalog=FStoreDB;Persist Security Info=True;User ID=SA;Password=vV5r9tn0M4@;TrustServerCertificate=true;"
 
+  },
+  "JWT": {
+    "ValidAudience": "WebAPI",
+    "ValidIssuer": "https://localhost:7147/swagger/index.html",
+    "SecretKey": "This is security key from elder connection 123456@Fpt",
+    "TokenValidityInMinutes": 10,
+    "RefreshTokenValidityInDays": 7
   }
 }
