--- a/SE161774.ProductManagement.API/appsettings.json
+++ b/SE161774.ProductManagement.API/appsettings.json
@@ -12,10 +12,9 @@
 
   },
   "JWT": {
-    "ValidAudience": "WebAPI",
-    "ValidIssuer": "https://localhost:7147/swagger/index.html",
+    "ValidAudience": "Product Management",
+    "ValidIssuer": "https://localhost:9091/swagger/index.html",
     "SecretKey": "This is security key from elder connection 123456@Fpt",
-    "TokenValidityInMinutes": 10,
-    "RefreshTokenValidityInDays": 7
+    "TokenValidityInMinutes": 30
   }
 }
